--- a/CSS/button/style.css
+++ b/CSS/button/style.css
@@ -1,20 +1,4 @@
-#container{
-	background-color: grey;
-	width:960px;
-	/*overflow: hidden;
-	height: auto;*/
-}
-#box-1, #box-2, #box-3{
-	background-color: green;
-	height: 200px;
-	width: 200px;
-	border: 1px solid black;
-	margin: 0 20px;
-	padding: 20px;
-}
-#box-1, #box-2, #box-3{
-	float:right;
-}
-.clear{
-	clear: both;
-}
+.button{display: block;}
+    .button.one{border-radius:25px; background-color: #F5F5F5; text-align: center; }
+    .button.two{}
+    .button.three{}
