--- a/CSS/octoCat/style.css
+++ b/CSS/octoCat/style.css
@@ -1,77 +1,26 @@
 /* global styles */
-*{
-    margin: 0;
-    padding: 0;
-}
+*{margin: 0; padding: 0;}
 
-body{
-    background-color: #FCFCFF;
-}
+body{background-color: #FCFCFF;}
 
-img{
-    max-width:200px;
-    display: block;
-}
+img{max-width:200px;display: block;}
 
-h1{
-    font-family: 'Comfortaa', cursive;
-    color:#F7CE55;
-    padding: 25px;
-    text-align: center;
-    font-size: 50px;
-    position: relative;
-}
-
-h1 span.hidden{
-    position: absolute;
-    opacity: 0;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    width: 800px;
-    color: #4D2E82;
-    transition: all .25s ease-in;
-}
-
-h1 span.visible{
-    transition: all .25s ease-in;
-}
-h1:hover span.visible{
-    cursor: pointer;
-    opacity: 0;
-    transition: all .25s ease-in;
-}
-h1:hover span.hidden{
-    cursor: pointer;
-    opacity: 1;
-    transition: all .25s ease-in;
-}
+h1{font-family: 'Comfortaa', cursive; color:#F7CE55; padding: 25px; text-align: center; font-size: 50px; position: relative;}
+h1 span.hidden{position: absolute; opacity: 0; left: 0; right: 0; margin: 0 auto; width: 800px; color: #4D2E82; transition: all .25s ease-in;}
+h1 span.visible{transition: all .25s ease-in;}
+    h1:hover span.visible{cursor: pointer; opacity: 0; transition: all .25s ease-in;}
+    h1:hover span.hidden{cursor: pointer; opacity: 1; transition: all .25s ease-in;}
 
 /* row styles */
-.row{
-    display: flex;
-    margin: 25px auto;
-    padding: 25px;
-    display: flex;
-    max-width:800px;
-}
+.row{ display: flex; margin: 25px auto; padding: 25px; display: flex; max-width:800px;}
+    .one{background-color: #5A2144;align-items: center;justify-content: space-between;}
+    .two{background-color: #3E629C; align-items: center; justify-content: center; gap:50px}
+        .two p{}
+    .three{background-color: #7C1D72; align-items: center; justify-content: space-around;}
 
-.one{
-    background-color: #5A2144;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.two{
-    background-color: #3E629C;
-    align-items: center;
-    justify-content: center;
-    gap:50px
-}
-
-/* one and three look the same */
-.three{
-    background-color: #7C1D72;
-    align-items: center;
-    justify-content: space-around;
-}
+.block{position: relative;}
+.block > img{display: block; position: relative; z-index: 10; transform: rotateY(0deg); transition: all .25s ease-in;}
+    .block:hover > img{opacity: 0; transform: rotateY(90deg); transition: all .25s ease-in;}
+.block > p{font-family: 'Comfortaa', cursive; color:#7DCEDA; position: absolute; top: 50%; transform: translateY(-50%); left: 0;right: 0; text-align: center;opacity: 0; z-index: 1; transition: all .25s ease-in;}
+    .block:hover > p{opacity: 1; transition: all .25s ease-in;}
+    
