--- a/CSS/columns/style.css
+++ b/CSS/columns/style.css
@@ -2,13 +2,28 @@
 body{background-color:##F2F2F2; padding: 25px; font-family: 'Playfair Display', serif;}
 
 /* row */
-.row{display: flex; gap:10px; margin-bottom: 10px; justify-content: center;align-items: center; }
-.col{width: 25%; background-color: #400101; border-radius:10px; padding:25px; color:#D96704; }
+.row{display: flex; gap:10px; margin-bottom: 10px; justify-content: center;align-items: center;}
+.col{width: 25%; background-color: #400101; border-radius:10px; padding:25px; color:#D96704; overflow: hidden;}
 
 .row:nth-child(2) .col{width: 33.33%;}
 .col-2{flex-basis: 66.66%; background-color: #400101; color:#D96704; border-radius:10px; padding:25px; flex}
 
 .row:nth-child(3) .col{width:40%;}
-.col-3{width: 60%; background-color: #400101; color:#D96704; border-radius:10px; padding:25px; }
+.col-3{width: 60%; background-color: #400101; color:#D96704; border-radius:10px; padding:25px;}
 
+/* hover elements */
+.bar{position: relative;}
+    .bar:before{content:''; background-color: #F28705; max-width:0; width: 100%; height: 100%; position: absolute; top: 0; left: 0; transition: all .25s ease-in;}
+        .bar:nth-child(1):hover:before{max-width:300px; transition: all .25s ease-in;}
+    .bar:nth-child(2):before{max-width:0px; transition: all .25s ease-in;}
+        .bar:nth-child(2):hover:before{max-width:175px; animation: showBar .5s ease-in;}
+    .bar:nth-child(3):before{max-width:0px; transition: all .25s ease-in;}
+        .bar:nth-child(3):hover:before{max-width:75px; animation: showBar .5s ease-in;}
+    .bar:nth-child(4):before{max-width:0px; transition: all .25s ease-in;}
+        .bar:nth-child(4):hover:before{max-width:120px; animation: showBar .5s ease-in;}
+
+/* bar spans */
+.bar span{opacity: 0; position: absolute; right:0;}
+
+    
 
