--- a/CSS/octoCat/style.css
+++ b/CSS/octoCat/style.css
@@ -12,7 +12,7 @@ h1 span.visible{transition: all .25s ease-in;}
 /* row styles */
 .row{ display: flex; margin: 25px auto; padding: 25px; display: flex; max-width:800px;}
     .one{background-color: #5A2144;align-items: center;justify-content: space-between;}
-    .two{background-color: #3E629C; align-items: center; justify-content: center; gap:50px}
+    .two{background-color: #3E629C; align-items: center; justify-content: center; gap:50px;}
     .three{background-color: #7C1D72; align-items: center; justify-content: space-around;}
 
 /* block */
@@ -21,4 +21,3 @@ h1 span.visible{transition: all .25s ease-in;}
     .block:hover > img{opacity: 0; transform: rotateY(90deg); transition: all .25s ease-in;}
     .block > p{font-family: 'Comfortaa', cursive; color:#7DCEDA; position: absolute; top: 50%; transform: translateY(-50%); left: 0;right: 0; text-align: center;opacity: 0; z-index: 1; transition: all .25s ease-in;}
     .block:hover > p{opacity: 1; transition: all .25s ease-in;}
-    
