--- a/JS/fizzbuzz/style.css
+++ b/JS/fizzbuzz/style.css
@@ -1,5 +1,18 @@
+:root{
+    --pink:#A6037A;
+    --dk-blue:#07668C;
+    --blue:#A0B9D9;
+}
+
 *{font-family: 'Open Sans', sans-serif;margin: 0;padding: 0; box-sizing: border-box;}
+
+.pink,.Fizz{color:var(--pink); font-size:20px;;}
+.dk-blue,.Buzz{color:var(--dk-blue); ; font-size:20px;;}
+.blue,.FizzBuzz{color:var(--blue); font-size:20px;;}
 
 .fizzBuzz{padding:25px; max-width:1200px; margin:0 auto;}
 .fizzBuzz ul{padding-left: 25px;}
 .fizzBuzz li{padding-bottom: 5px;}
+
+.fizz-cont{padding-top: 25px; display: flex; align-items: start;justify-content: start; flex-wrap: wrap;}
+.fizz-cont div{width: 25%;padding-bottom: 10px;}
