playing more with objects

--- a/JS/lessons/objects/style.css
+++ b/JS/lessons/objects/style.css
@@ -1,5 +1,7 @@
 :root{
     --red:red;
+    --black:black;
+    --white:white;
 }
 
 .box{background-color:var(--red); width: 100px; height: 100px;}
