--- a/JS/likes/style.css
+++ b/JS/likes/style.css
@@ -16,23 +16,32 @@ p{font-size: 16px;}
 /* GLOBAL */
 *{padding: 0;margin: 0;box-sizing: border-box; font-family: 'Roboto Condensed', sans-serif;}
 .container-wrp{max-width:800px; margin: 0 auto; display: flex; align-items: start;justify-content: start; flex-wrap: wrap;}
-button,input.submit{border: solid 2px var(--black); transition: all .25s ease-in;
+button,input.submit,.button{border: solid 2px var(--black); transition: all .25s ease-in;
     box-shadow: 5px 1px 0px -2px rgba(0,0,0,1);
     -webkit-box-shadow: 5px 5px 0px -2px rgba(0,0,0,1);
     -moz-box-shadow: 5px 5px 0px -2px rgba(0,0,0,1);}
-    button:hover,input.submit:hover{cursor: pointer;  box-shadow:none; transition: all .25s ease-in;}
+    button:hover,input.submit:hover,.button:hover{cursor: pointer;  box-shadow:none; transition: all .25s ease-in;}
+
+/* TOP */
+.top{background-color:var(--black); color:var(--white); width: 100%; margin-bottom: 25px; padding: 25px;}
 
 /* MAIN */
+main{width: calc(100% - 200px); padding-left: 50px;}
 main .def-block{margin-bottom:  25px; border:solid 2px var(--black); width: 100%; padding: 25px; display: flex;align-items: center;justify-content: center; flex-wrap: wrap;}
-main .word-elements{width: 100%; display: flex;align-items: center;justify-content: center; text-align: center; padding-right: 50px;}
+main .word-elements{width: 100%; display: flex;align-items: center;justify-content: space-between; text-align: center; padding-right: 50px;}
 main .word-elements h2{text-align-last: left;}
 main .word-elements > *{width: 33.33%;}
-main .word-elements .button{display: block;background-color:var(--yellow); padding: 10px; position: relative;}
-    main .word-elements .button .fa-thumbs-up{position: absolute; font-size: 40px; left: 10px; opacity: 0; top:-5px;  transform: scale(.5); animation: popFade .9s ease-in;}
+main .likes{display: flex; justify-content: space-around; align-items: center;}
+main .word-elements .button{display: block;background-color:var(--yellow); padding: 10px; position: relative; max-width: 100px;}
+    main .word-elements .fa-thumbs-up{position: absolute; font-size: 40px; left: 10px; opacity: 0; top:-5px;  transform: scale(.5); animation: popFade .9s ease-in;}
     @keyframes popFade{
         0%{opacity: 1; transform: scale(1);}
         25%{opacity: 1; transform: scale(1.1);}
         100%{opacity: 0; transform: scale(.75);}
     }
 .definition{width: 100%; padding-top: 25px; text-align: left;}
+
+/* ASIDE */
+aside{width: 200px; border:solid 2px var(--black); padding: 25px;}
+aside img{display: block;margin: 0 auto;}
 
