--- a/JS/clock/style.css
+++ b/JS/clock/style.css
@@ -1,9 +1,9 @@
 #face {
-    background-color: #f3f3f3;
+    background-color: #1c7d8b2b;
     width: 300px;
     height: 300px;
     border-radius: 50%;
-    border: 6px solid black;
+    border: 6px solid #046370;
     position: relative;
     transform: rotate(180deg);
   }
@@ -16,23 +16,24 @@
   }
       
   #seconds {
-    background-color: red;
+    background-color: #4AD9A4;
     height: 130px;
     width: 2px;
-    transform: rotate(0deg);
+    transform: rotate(0deg); border-radius:5px;
   }
       
   #hour {
-    background-color: black;
-    height: 100px;
+    background-color: #013759 ;
+    height: 80px;
     width: 8px;
-    transform: rotate(0deg);
+    transform: rotate(0deg); border-radius:5px;
   }
       
   #minutes {
-    background-color: grey;
+    background-color: #0267A6;
     height: 120px;
     width: 4px;
-    transform: rotate(0deg);
+    transform: rotate(0deg); border-radius:2px;
   }
   
+  .center{position: absolute; top: 50%; transform: translateY(-50%); left: 8px;right: 0; margin:0 auto; height:15px; width:15px; border-radius:50%; background-color: #046370;}
