--- a/JS/calculator/style.css
+++ b/JS/calculator/style.css
@@ -25,6 +25,6 @@ h1{text-align: center; padding-top: 25px; font-weight: 900; color:var(--black);}
     #calculator .clear{background-color:var(--cream);}
     #calculator button:not(#equals):not(.operator):not(.clear){background-color:var(--yellow);}
 
-#display{padding: 15px 0; margin-top: 25px;font-size: 20px;font-weight: 900;}
+#display{padding: 15px 0; margin-top: 25px;font-size: 20px;font-weight: 900; height: 63px;}
 
 #equals{width: 100%;}
