--- a/algos/minesweeper/game.css
+++ b/algos/minesweeper/game.css
@@ -32,3 +32,6 @@ h2 {
     border-right: 2px solid #ccc;
     border-bottom: 2px solid #ccc;
 }
+
+.popup{position: absolute; top: 150px;max-width:400px; margin:0 auto; left: 0; right: 0; text-align: center; background-color:wheat; padding: 25px; border:4px solid #ccc}
+.popup p{padding-bottom: 25px;}
