--- a/APIs/style.css
+++ b/APIs/style.css
@@ -4,7 +4,7 @@
 }
 *{padding: 0;margin: 0;box-sizing: border-box; font-family: 'Source Sans Pro', sans-serif;}
 
-main{background-repeat: no-repeat; background-size: cover; height:100vh; background-position: center; position: relative;}
+main{background-image: url('img/summer.jpeg'); background-repeat: no-repeat; background-size: cover; height:100vh; background-position: center; position: relative;}
     main:before{content:''; height:100%; width: 100%;background-color:rgba(0,0,0,.5); position: absolute; top: 0;left: 0; }
     main:after{content:''; height:100%; width: 100%; position: absolute; top: 0;left: 0;  background: rgb(0,212,255);
         background: radial-gradient(circle, rgba(0,212,255,0.25) 0%, rgba(9,9,121,0.25) 35%, rgba(2,0,36,0.75) 100%);}
